# finflow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  PLAYBOOK.md  README.md  compose.yml
.claude/: README.md  session-issue-3-stage-3.md
.claude/rules/: README.md  backend.md  docs-first.md  repo-hygiene.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: README.md  bug.yml  config.yml  feature.yml  tech-debt.yml
.github/workflows/: ci-pr-report.yml  ci.yml  claude-bootstrap.yml
backend/: .dockerignore  Dockerfile.dev  README.md  alembic.ini  create_pg.sh  mypy.ini  pg_hba_custom.conf  pyproject.toml  test_db.py
backend/alembic_migrations/: README.md  env.py
backend/alembic_migrations/versions/: 20260306194919_add_auth_tables.py  20260306210000_add_refresh_sessions.py  20260307120000_add_finance_tables.py  20260314120000_add_telegram_chat_links.py  437066017687_add_projected_transactions.py  7c1a6f700f92_add_planned_payments.py  9674289f1982_add_planned_payment_to_transactions.py  README.md
backend/app/: __init__.py  exceptions.py  main.py  scheduler.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/v1/: __init__.py  accounts.py  auth.py  cashflow.py  categories.py  health.py  planned_payments.py  projected_transactions.py  reports.py  router.py  telegram.py  transactions.py
backend/app/core/: __init__.py  auth_cookies.py  config.py  error_handlers.py  rate_limit.py  request_context.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/integrations/: __init__.py  ollama_client.py
backend/app/models/: __init__.py  account.py  api_token.py  category.py  planned_payment.py  projected_transaction.py  refresh_session.py  telegram_chat_link.py  transaction.py  types.py  user.py
backend/app/repositories/: __init__.py  account_repository.py  api_token_repository.py  category_repository.py  planned_payment_repository.py  projected_transaction_repository.py  refresh_session_repository.py  report_repository.py  telegram_chat_link_repository.py  transaction_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  error.py  finance.py  llm.py  parse_create.py  telegram.py
backend/app/services/: __init__.py  auth_service.py  cashflow_service.py  llm_parse_service.py  parse_create_service.py  parse_service.py  planned_payment_service.py  planned_payments_executor.py  projected_transaction_service.py  projection_scheduler_service.py  report_service.py  telegram_bot_service.py  transaction_import_service.py  transaction_service.py
backend/tests/: conftest.py  postgres.py
backend/tests/api/: test_auth.py  test_cashflow.py  test_error_contract.py  test_finance_crud.py  test_health.py  test_parse_create_api.py  test_planned_payments.py  test_projected_transactions.py  test_rate_limit.py  test_reports.py  test_telegram_webhook.py  test_transaction_import.py
backend/tests/integration/: __init__.py  conftest.py  test_auth_repositories.py  test_database.py  test_finance_repositories.py
backend/tests/services/: test_cashflow_service.py  test_projected_transaction_service.py  test_projection_scheduler_service.py  test_transaction_service.py
backend/tests/unit/: __init__.py  test_finance_models.py  test_llm_parse_service.py  test_parse_create.py  test_planned_payment.py  test_report_service.py  test_security.py
docs/: README.md  testing-architecture.md
docs/agent/: README.md  auth-patterns.md  backend-roadmap.md  backend-stack.md  feature-delivery-checklist.md  github-cli-setup.md  issue-execution-playbook.md  refactoring-playbook.md
docs/agent/features/: auth-foundation.md  code-quality-tooling.md  domain-model.md  planned-payments.md  project-bootstrap.md  reports-foundation.md  testing-with-postgres.md  transaction-ingestion.md
docs/snippets/: db-migrations.md  github-actions-postgres.md  linting.md  parser.md  security.md  testcontainers.md  testing.md
docs/spec/: backend.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  AppProviders.tsx  router.tsx  styles.css
frontend/src/test/: test-utils.tsx
scripts/dev/: assert-clean-git.ps1  assert-clean-git.sh  check-backend.ps1  check-backend.sh
(+63 files in other folders)
