[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finflow-backend"
version = "0.1.0"
description = "FinFlow personal finance backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0; python_version >= '3.12' and platform_system != 'Windows'",
    "alembic>=1.13.0,<2.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "pwdlib[argon2]>=0.2.0,<0.3.0",
    "PyJWT>=2.9.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "apscheduler>=3.10.4,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "anyio>=4.4.0,<5.0.0",
    "testcontainers>=4.0.0,<5.0.0",
    "ruff>=0.6.0,<0.7.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=3.8.0,<4.0.0",
]

[project.scripts]
finflow = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_optional = true
exclude = [
    "^tests/",
    "^test_db\\.py$",
    "^alembic_migrations/versions/9674289f1982_add_planned_payment_to_transactions\\.py$",
]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning",
]
markers = [
    "unit: Unit tests (no database required)",
    "integration: Integration tests (require PostgreSQL)",
    "api: API tests (require FastAPI + PostgreSQL)",
]
